<resources>
    <string name="app_name">Instagram</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time</string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="network_login_again">Please log in again</string>


    <!--login-->
    <string name="email_field_hint">Enter your email</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="login_button_text">Login</string>

    <!-- sign up -->
    <string name="full_name_field_hint">Enter your full name</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="full_name_field_empty">FullName can\'t be empty</string>
    <string name="full_name_field_small_length">Full name is less than 4 digit</string>
    <string name="sign_up_email_button_text">Sign Up with Email</string>
    <string name="login_email_button_text">Login with Email</string>
    <string name="choose_password_field_hint">Choose your password</string>


    <!--menu-->
    <string name="menu_home">Home</string>
    <string name="menu_add_photos">Add Photos</string>
    <string name="menu_profile">Profile</string>

    <!--posts-->
    <string name="post_like_label">%1d Likes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="change_photo_text">Change Photo</string>
    <string name="name_text">Name</string>
    <string name="bio_text">Bio</string>
    <string name="private_information_text">Private information</string>
    <string name="email_address_text">Email Address</string>
    <string name="logout_text">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="try_again">please try again</string>
</resources>
