<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.edit.EditProfileActivity">

    <include
        layout="@layout/toolbar_edit_profile"
        android:id="@+id/toolbarEditProfile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageProfile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/ic_profile_add_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarEditProfile" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvChangePhoto"
        app:layout_constraintTop_toBottomOf="@id/imageProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/blue"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        android:text="@string/change_photo_text"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvChangePhoto"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:text="@string/name_text"
        android:textColor="@color/grey"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:hint="@string/name_text"
        android:backgroundTint="@color/greyLight"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvBio"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/bio_text"
        android:textColor="@color/grey"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/etBio"
        android:hint="@string/bio_text"
        android:backgroundTint="@color/greyLight"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvBio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:id="@+id/viewLine"
        android:background="@color/greyLight"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etBio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPrivateInformation"
        app:layout_constraintTop_toBottomOf="@id/viewLine"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:text="@string/private_information_text"
        android:layout_marginTop="14dp"
        style="@style/TextAppearance.AppCompat.Headline"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@id/tvPrivateInformation"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginStart="30dp"
        android:layout_marginTop="14dp"
        android:text="@string/email_address_text"
        android:textColor="@color/grey"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:hint="@string/email_address_text"
        android:backgroundTint="@color/greyLight"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>